# clickhouse-rs

./: Cargo.toml  README.md
examples/: array.rs  binary.rs  simple.rs  tls.rs
examples/util/: mod.rs
src/: connecting_stream.rs  errors.rs  lib.rs  retry_guard.rs
src/io/: stream.rs
src/pool/: mod.rs
src/pool/futures/: get_handle.rs
src/types/: mod.rs  value.rs  value_ref.rs
src/types/block/: builder.rs  mod.rs  row.rs
src/types/column/: array.rs  factory.rs  mod.rs  string.rs  uuid.rs
src/types/query_result/: mod.rs
tests/: clickhouse.rs
