[package]
name = "clickhouse-rs"
version = "0.2.0-alpha.3"
authors = ["Mikhail Sukharev <suharev7@gmail.com>"]
license = "MIT"
homepage = "https://github.com/suharev7/clickhouse-rs"
repository = "https://github.com/suharev7/clickhouse-rs"
description = "Asynchronous Yandex ClickHouse client library."
documentation = "https://docs.rs/clickhouse-rs/"
readme = "README.md"
keywords = ["tokio", "database", "clickhouse"]
categories = ["database"]
edition = "2018"
exclude = ["tests/*", "examples/*"]

[features]
default = ["async_std"]
tls = ["native-tls"]
async_std = []
tokio_io = []

[dependencies]
futures-core = "0.3.1"
futures-util = "0.3.1"
futures = "0.3.1"
tokio = { version = "0.2.2", features = ["tcp", "net", "sync", "full", "time"] }
async-std = { version = "1.2.0", features = ["unstable"] }
broadcaster = "^0.3.0"

pin-project = "0.4.5"

hostname = "^0.2"

chrono = "0.4"
chrono-tz = "0.5"

lz4 = "1.23.1"
clickhouse-rs-cityhash-sys = { path = "clickhouse-rs-cityhash-sys", version = "0.1.1" }

byteorder = "^1.3"
failure = "^0.1.5"
failure_derive = "^0.1.5"
url="^2"
lazy_static = "1.4.0"

log = { version = "0.4.8", features = ["std", "serde"] }
crossbeam = "0.7"

native-tls = { version = "0.2.3", optional = true }

[dev-dependencies]
env_logger = "^0.6"
rand = "^0.7"
